<resources>
    <string name="app_name">PTSD Aid</string>

    <!-- Navigation Items in the Drawer Layout -->
    <string name="nav_simple_test">Recommendations</string>
    <string name="nav_test">PTSD Test</string>
    <string name="Resources">Resources</string>
    <string name="nav_nearby">VA Facilities</string>
    <string name="nav_news">News</string>
    <string name="nav_support">Support</string>
    <string name="nav_call">Call</string>
    <string name="nav_website">Websites</string>

    <!-- Main Fragment -->
    <string name="main_header">Welcome!</string>
    <string name="emotion_prompt">How are you feeling?</string>
    <string name="recommendations_title">Recommendations</string>
    <string name="recommendation_resources">Look at the resources to learn about possible symptoms of Post Traumatic Stress Disorder</string>
    <string name="recommendation_test">Take the PTSD test to determine if you suffer from PTSD</string>
    <string name="recommendation_call_trusted_contact">Call your trusted contact</string>
    <string name="recommendation_sign_in">Sign In</string>
    <string name="recommendation_add_trusted_contact">Add a trusted contact</string>
    <string name="recommendation_call_veterans_crisis_line">Call the Veterans Crisis Line</string>
    <string name="recommendation_veteran_association">Join a veteran association to meet veterans who share the same experiences as you</string>
    <string name="veterans_network_website">http://veteransnetwork.net/directory.php</string>
    <string name="recommendation_veteran_benefits">View the VA website to find information for veterans</string>
    <string name="recommendation_find_facility">Find a nearby VA facility</string>
    <string name="sad_face_content_description">Sad Face</string>
    <string name="ok_face_content_description">OK Face</string>
    <string name="happy_face_content_description">Happy Face</string>
    <string name="sick_emoji_content_description">Sick emoji</string>
    <string name="poop_emoji_content_description">Poop emoji</string>

    <!-- PTSD Test -->
    <string name="stress_prompt">How much you have been bothered by the following in the past month?</string>
    <string-array
        name="stress_questions">
        <item>Repeated, disturbing memories or thoughts of a stressful military experience while awake?</item>
        <item>Repeated, disturbing dreams of a stressful military experience while sleeping?</item>
        <item>Suddenly acting or feeling as if a stressful military experience were happening again (as if you were reliving it)?</item>
        <item>Feeling very upset when something reminded you of a stressful military experience?</item>
        <item>Having physical reactions (heart pounding, trouble breathing, sweating) when something reminded you of a stressful military experience?</item>
        <item>Avoiding thinking about or talking about a stressful military experience or avoiding having feelings related to it?</item>
        <item>Avoiding activities or situations because they reminded you of a stressful military experience?</item>
        <item>Trouble remembering important parts of a stressful military experience?</item>
        <item>Loss of interest in activities that you used to enjoy?</item>
        <item>Feeling distant or cut off from other people?</item>
        <item>Feeling emotionally numb or being unable to have loving feelings for those close to you?</item>
        <item>Feeling as if your future somehow will be cut short?</item>
        <item>Trouble falling or staying asleep?</item>
        <item>Feeling irritable or having angry outbursts?</item>
        <item>Having difficulty concentrating?</item>
        <item>Being "super alert" or watchful or on guard?</item>
        <item>Feeling jumpy or easily startled?</item>
    </string-array>
    <string name="not_at_all">Not at all</string>
    <string name="little_bit">A little bit</string>
    <string name="moderately">Moderately</string>
    <string name="quite_a_bit">Quite a bit</string>
    <string name="extremely">Extremely</string>
    <string name="submit_test">Submit</string>
    <string name="results">Results</string>
    <string name="result_minimal">You have few or no symptoms of PTSD</string>
    <string name="result_medium">You have minimal symptoms of PTSD</string>
    <string name="result_high">Your results are consistent with many of the symptoms of PTSD</string>
    <string name="see_professional_low">However, you still may wish to consult with a professional</string>
    <string name="see_professional_medium">You may benefit from seeking help from a professional</string>
    <string name="see_professional_high">You are advised to see your physician or a qualified mental health professional immediately for a complete assessment</string>
    <string name="find_professional">Find Professional</string>
    <string name="share_results">Share Results</string>

    <!-- Resources -->
    <string name="symptoms">Symptoms</string>
    <string name="symptoms_detail">Usually start soon after the event but may not appear for months or years later.\n\nSymptoms include nightmares or flashbacks, avoiding situations that remind you of an event, avoiding situations or people that trigger memories.\n\nNegative changes in beliefs and feelings, the way you feel about yourself or others may change. You may feel guilt or shame. You may not be interested in activities that you used to enjoy.\n\nHyper-arousal, always alert, jumpy, may have trouble concentrating or sleeping.\n\nCo-occurring problems may include: depression, anxiety, substance abuse (self-medicating), employment and relationship problems.</string>
    <string name="causes">Causes</string>
    <string name="causes_detail">Usually occurs after a traumatic event. It depends on the intensity of the trauma, how long it lasted, if injured or lost someone, how close you were to the event and how much you felt in control of the event.</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="diagnosis_detail">This app is for reference only. For a complete diagnosis, please visit a mental health professional.</string>
    <string name="treatment">Treatment</string>
    <string name="treatment_detail">There are two main types of treatment, psychotherapy and medication.\n\n1.  Psychotherapy (or counseling) includes Cognitive Behavioral Therapy (CBT). Some of the types of CBT are Cognitive Processing Therapy (CPT) where you learn skills to understand how the trauma changed your thoughts and thinking, then change the negative thought patters. There is also Prolonged Exposure Therapy (PE) which is the repeated imaginal and real-world exposure to the trauma until it is no longer upsetting.\n\n2. Medications, Selective Serotonin Reuptake Inhibitor (SSRI) is also effective for PTSD. Some people seek treatments that do not involve medications because of the side effects.</string>
    <string name="counseling">Counseling</string>
    <string name="counseling_detail">The Vet Centers provides bereavement, military sexual trauma, substance abuse, screening and referral for medical issues including TBI, depression, etc. For more information or to find the nearest Vet Center use the VA Facilities tab</string>

    <!-- VA Facilities -->
    <string name="loading">Loading</string>
    <string name="va_loading_error">The VA facilities can not be loaded</string>
    <string name="retry">Retry</string>

    <!-- Call -->
    <string name="veterans_crisis_line_title">Veterans Crisis Line</string>
    <string name="phone_veterans_crisis_line">1-800-273-8255</string>
    <string name="veterans_crisis_line_details">Veterans Press 1</string>

    <string name="suicide_lifeline_title">Suicide Lifeline</string>
    <string name="phone_suicide_lifeline">1-800-273-8255</string>
    <string name="suicide_lifeline_phone_details">It is common to feel anxious after incidents of mass violence. You are not alone.</string>
    
    <string name="lifeline_for_vets_title">Lifeline for Vets</string>
    <string name="phone_veterans_foundation_hotline">1-888-777-4443</string>
    <string name="lifeline_for_vets_details">We help veterans and their families who are enduring a crisis or who have a critical need for help. Veterans of any era can call for assistance.</string>
    
    <string name="ncaad_title">NCAAD</string>
    <string name="phone_alcoholism">1-800-622-2255</string>
    <string name="alcohol_phone_details">Addiction is a Disease\nTreatment is Available\nRecovery Brings Joy</string>

    <!-- Websites -->
    <string name="veterans_chat_title">Veterans Crisis Line - Online Chat</string>
    <string name="veterans_chat_details">Responders at the Veterans Crisis Line online chat offer help that can make a difference. It is completely confidential and responders will work with you to help you get through any personal crisis, even if that crisis does not involve thoughts of suicide. Get the support you’ve earned.</string>
    <string name="website_chat">https://www.veteranscrisisline.net/ChatTermsOfService.aspx?account=Veterans%20Chat</string>
    <string name="nimh_title">National Institute of Mental Heath</string>
    <string name="nimh_details">Find more information about Post Traumatic Stress Disorder.</string>
    <string name="website_nimh">http://www.nimh.nih.gov/health/topics/post-traumatic-stress-disorder-ptsd/index.shtml</string>
    <string name="veteran_affairs_title">Veterans Affairs</string>
    <string name="veteran_affairs_details">Find more information about PTSD from the Department of Veterans Affairs</string>
    <string name="website_va">http://www.ptsd.va.gov/</string>
    <string name="self_quiz_title">Self-Check Quiz</string>
    <string name="self_quiz_details">A more in depth quiz about whether stress and depression may be affecting you. A VA Chat Counselor will review it and respond within 15 minutes. It is completely confidential.</string>
    <string name="website_self_check">https://www.vetselfcheck.org/Welcome.cfm</string>
    <string name="ptsd_coach_title">PTSD Coach</string>
    <string name="ptsd_coach_details">PTSD Coach Online is for anyone who needs help with upsetting feelings. Trauma survivors, their families, or anyone coping with stress can benefit.</string>
    <string name="website_coach">http://www.ptsd.va.gov/apps/ptsdcoachonline/default.htm</string>

    <!-- Trusted Contact -->
    <string name="trusted_contact">Trusted Contact</string>
    <string name="trusted_contact_explanation">Tap the call button anytime in the app to call your trusted contact</string>
    <string name="add_trusted_contact_prompt">Would you like to add a trusted contact?</string>
    <string name="change_trusted_contact">Change Trusted Contact</string>
    <string name="add_trusted_contact">Add Trusted Contact</string>

    <!-- Other -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alarm_service_label">Alarm Service Label</string>
    <string name="profile_picture_content_description">Profile Picture</string>
    <string name="error_open_dialer">Unable to open the dialer</string>
    <string name="error_choose_contact">Unable to choose a trusted contact</string>
    <string name="error_location_permission">Unable to load the VA facilities. Please grant the location permission</string>
    <string name="facility_more_info">More Info</string>
    <string name="phone_icon_content_description">Phone Icon</string>
    <string name="website_icon_content_description">Website icon</string>
    <string name="facility_image_content_description">Facility Image</string>
    <string name="address_icon_content_description">Address icon</string>
    <string name="recommendation_call_veterans_foundation">Call the veterans foundation</string>
    <string name="rating_prompt_message">How well do you like PTSD Aid?</string>
    <string name="rating_prompt_title">Enjoying the app?</string>
    <string name="support_subject">PTSD Aid</string>
    <string name="support_body">Hello! I would like to give feedback on PTSD Aid!\n\nWhat I liked:\n\nWhat I didn\'t like:\n\n\nDevice Information:\n</string>
    <string name="contacts_permission_title">Please grant the contacts permission</string>
    <string name="contacts_permission_message">Grant the contacts permission to continue</string>
    <string name="gps_error">Your GPS location can not be determined</string>
    <string name="share_results_chooser">Share with</string>
    <string name="action_search">Search</string>
    <string name="open_website">More Info</string>
    <string name="unsubscribe_news_notifications">Unsubscribe</string>
    <string name="unsubscribed_news_message">You have unsubscribed from news notifications</string>
    <string name="pref_news_notification">news_notification</string>
    <string name="nav_settings">Settings</string>
    <string name="pref_daily_notification">daily_notification</string>
    <string name="pref_veteran">is_veteran</string>
    <string name="feedback_message_hint">What would you like to tell me?</string>
    <string name="licenses">Licenses</string>
    <string name="recommendation_update_app">Update your app for the newest information and recommendations</string>
    <string name="error_load_news">Unable to load the news. Check your internet connection.</string>
    <string name="expand_message">Expand message</string>
    <string name="your_current_trusted_contact_is">Your current trusted contact is</string>
    <string name="error_news_network">Unable to load the news. Check your internet connection.</string>
    <string name="error_va_facilities">Unable to load VA facilities</string>
    <string name="preference_notifications">Notifications</string>
    <string name="veteran_pref_title">I am a veteran</string>
    <string name="veteran_pref_summary">Receive personalized recommendations</string>
    <string name="pref_news_title">News Articles</string>
    <string name="pref_news_summary">Receive notifications for VA news</string>
    <string name="pref_trusted_contact_title">Enable trusted contact</string>
    <string name="pref_trusted_contact_summary">Show the trusted contact button</string>
    <string name="pref_change_contact_summary">Change your trusted contact</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=com.tytanapps.ptsd</string>
    <string name="rate_app_title">Enjoying the app?</string>
    <string name="rate_app_summary">Please rate on Google Play</string>
    <string name="feedback_title">Provide Feedback</string>
    <string name="feedback_summary">Contact developer</string>
    <string name="feedback_category_title">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="settings_title">Settings</string>
    <string name="resources_title">Resources</string>
    <string name="ptsd_test_title">PTSD Test</string>
    <string name="phone_title">Phone Resources</string>
    <string name="web_title">Online Resources</string>
    <string name="facilities_title">VA Facilities</string>
    <string name="news_title">VA News</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="my_info">My Info</string>
    <string name="open_source_title">This app is open source</string>
    <string name="open_source_summary">View the code on github</string>
    <string name="licenses_title">View licenses</string>
    <string name="licenses_summary">View the licenses used</string>
    <string name="about">About</string>
    <string name="error_refresh_news">Unable to refresh news articles</string>

</resources>
