<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/phone_icon_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/nvf"
            android:contentDescription="@string/phone_icon_content_description"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/phone_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_icon_imageview"
            android:gravity="center_horizontal"
            android:text="@string/phone_veterans_foundation_hotline"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/phone_details_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number_textview"
            android:text="@string/lifeline_for_vets_details"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/small_text_size"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>